tests/rules/samples/lexer_check_string_2.c
void main(void)
{
    char *str = "Pizza\
    :yum:";
    x = L"eae";
    x = L"\
    será q\
    x = ta certo?\"";
    x = "";
    x = "\
    ";
    x = "PAH! poW\
    XERAP\\\\\\\
    ";
}
